<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ScanItGroceryStoreHelper</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main">Lists</string>
    <string name="title_activity_list">List</string>
    <string name="title_activity_reminder">Reminders</string>
    <string name="title_activity_coupon">Deals</string>
    <string name="title_activity_scanner">Scanner</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_shopping">Shopping</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="select_reminder_type">Select reminder type</string>
    <string name="create_reminder">Create reminder</string>
    <string name="edit_reminder">Edit reminder</string>
    <string name="hint_general_reminder">Reminder name</string>
    <string name="hint_food_reminder">Name of food to expire</string>
    <string name="add">Add</string>
    <string name="confirm_delete_title">Confirm deletion</string>
    <string name="confirm_delete_message_reminder">Are you sure you want to delete the selected reminders?</string>
    <string name="confirm_delete_message_list">Are you sure you want to delete the selected lists?</string>
    <string name="confirm_delete_message_list_items">Are you sure you want to delete the selected list items?</string>
    <string name="notifcation_title">ScanIt! Grocery Store Helper reminder</string>
    <string name="list_header">My Lists</string>
    <string name="create_dialog_title">Create a list</string>
    <string name="name">Name</string>
    <string name="description">Description (Optional)</string>
    <string name="okay">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="delete_dialog_title">Delete</string>
    <string name="edit_list_dialog_title">Edit List</string>
    <string name="delete_are_you_sure">Are you sure you want to delete this list?</string>
    <string name="start_shopping">Start shopping!</string>
    <string name="done_shopping">Done shopping</string>
    <string name="done_shopping_dialog_title">What would you like to do with this list?</string>
    <string name="item">Item</string>
    <string name="quantity">Quantity (optional)</string>
    <string name="price">Price (optional)</string>
    <string name="plus">+</string>
    <string name="coupon_message">Select list to find deals for</string>
    <string name="expires_today">Your %s expires today</string>
    <string name="expires_tomorrow">Your %s expires tomorrow</string>
    <string name="expires_formated">Your %1$s expires in %2$d days</string>
    <string name="expired_formated">Your %s is expired</string>
    <string name="last_modified">Last modified %s</string>
    <string name="share">Share</string>
    <string name="send_to">Share list to...</string>
    <string name="could_not_find_item">Lookup failed. Please enter the item name</string>
    <string name="progress_dialog_title">Looking up product name</string>
    <string name="progress_dialog_message">Loading...</string>
    <string name="add_to_list">Add to List</string>
    <string name="select_list_dialog_title">Select list</string>
    <string name="scan_item">Scan item</string>
    <string name="zip_code">ZIP code</string>
    <string name="zip_code_dialog_title">Enter ZIP Code to look for deal</string>
    <string name="share_lookup_title">Share product name</string>
    <string name="share_lookup_message">Would you like to share this product name so that you and others can use it for future lookups?</string>
    <string name="say_item">Say the name of the item you want to add</string>
    <string name="speech_not_supported">Speech input is not supported on this device</string>
    <string name="select_correct_name">Select correct item name</string>
    <string name="reuse_all">Reuse entire list</string>
    <string name="reuse_part">Reuse items not marked off</string>
    <string name="delete_all">Delete list</string>
    <string name="use_current_location">Use current location</string>
    <string name="finding_current_location">Finding current location</string>
    <string name="about_title">About ScanIt</string>
    <string name="about_text">ScanIt Grocery Store Helper v1.0\nJacob Oakes and Daniel Wells\n\nmail:\noakesja@rose-hulman.edu\nwellsdb@rose-hulman.edu\n\n</string>
    <string name="main_header">Your lists</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="update">Update</string>
    <string name="main_contextual_title">Manage Lists</string>
    <string name="list_contextual_title">Manage List Items</string>
    <string name="reminder_contextual_title">Manage Reminders</string>
    <string name="list_name_error">List name is required</string>
    <string name="reminder_name_error">Reminder name is required</string>
    <string name="list_item_name_error">List item name is required</string>
    <string name="speech_item_removed">%s removed</string>
    <string name="speech_remove_item_title">Say the name of the item you want to remove</string>
    <string name="speech_could_not_find">Could not find %s in your list</string>
    <string name="speech_too_many_matches">Too many matches found to remove. Please be more specific</string>

</resources>