<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:myapp="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/shareList"
        android:actionProviderClass="android.widget.ShareActionProvider"
        android:icon="@drawable/ic_action_share"
        android:showAsAction="ifRoom"
        android:title="@string/share">
    </item>
    <item
        android:id="@+id/sayItem"
        android:icon="@drawable/ic_action_mic"
        android:showAsAction="ifRoom"
        android:title="@string/say_item">
    </item>
    <item
        android:id="@+id/scanItem"
        android:icon="@drawable/ic_action_barcode_light"
        android:showAsAction="ifRoom"
        android:title="@string/scan_item">
    </item>
    <item
        android:id="@+id/addListItem"
        android:icon="@drawable/ic_action_new"
        android:showAsAction="always"
        android:title="@string/add">
    </item>

</menu>